Modificaciones en el README y en la documentacion de Swagger
