# docs/swagger.json
@@ -74,33 +74,6 @@
                     }
                 }
             },
-            "delete": {
-                "description": "Deletes an existing odontologo from the repository",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "odontologos"
-                ],
-                "summary": "Deletes an odontologo",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Odontologo's ID in order to delete from it",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "body"
-                        }
-                    }
-                }
-            },
             "patch": {
                 "description": "Updates an existing odontologo from the repository with one o more features",
                 "produces": [
@@ -156,6 +129,30 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Deletes an existing odontologo from the repository",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "odontologos"
+                ],
+                "summary": "Deletes an odontologo",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Odontologo's ID in order to delete from it",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Odontologo eliminado exitosamente"
+                    }
+                }
             }
         },
         "/pacientes": {
@@ -184,33 +181,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/paciente.Paciente"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Deletes an existing paciente from the repository",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "paciente"
-                ],
-                "summary": "Deletes a paciente",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Paciente's ID in order to delete from it",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "body"
                         }
                     }
                 }
@@ -268,6 +238,30 @@
                         "schema": {
                             "$ref": "#/definitions/paciente.Paciente"
                         }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Deletes an existing paciente from the repository",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "paciente"
+                ],
+                "summary": "Deletes a paciente",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Paciente's ID in order to delete from it",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Paciente eliminado exitosamente"
                     }
                 }
             }
@@ -358,33 +352,6 @@
                     }
                 }
             },
-            "delete": {
-                "description": "Deletes an existing turno from the repository",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "turno"
-                ],
-                "summary": "Deletes a turno",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Turno's ID in order to delete from it",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "body"
-                        }
-                    }
-                }
-            },
             "patch": {
                 "description": "Updates an existing turno from the repository with one o more features",
                 "produces": [
@@ -438,6 +405,30 @@
                         "schema": {
                             "$ref": "#/definitions/turno.Turno"
                         }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Deletes an existing turno from the repository",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "turno"
+                ],
+                "summary": "Deletes a turno",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Turno's ID in order to delete from it",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Turnos eliminado exitosamente"
                     }
                 }
             }
